Fix versioning on mobile

--- a/src/pages/layout/ProtectedPanel/Header/styles.scss
+++ b/src/pages/layout/ProtectedPanel/Header/styles.scss
@@ -6,7 +6,6 @@ header {
 	background: var(--primary-color);
 	display: flex;
 	height: 84px;
-	min-height: 84px;
 	z-index: 3;
 
 	.mobile-only {
