--- a/src/pages/layout/ProtectedPanel/styles.scss
+++ b/src/pages/layout/ProtectedPanel/styles.scss
@@ -7,6 +7,7 @@ main #panel {
 	margin: 0 auto;
 	padding: 2em;
 	position: relative;
+	text-align: left;
 }
 
 small.version {
